# maelstro

./: .envs-database  .gitignore  .gitmodules  DOCKER_HUB.md  README.md  docker-compose-ci.yml  docker-compose-dev.yml  docker-compose-dev.yml.override.sample  docker-compose-geOrchestra.yml  docker-compose-solo.yml  docker-compose.override.sample.yaml  docker-compose.yml  index.yaml  mkdocs.yml
.github/workflows/: ci.yml  helm-publish.yml
backend/: #Dockerfile#  .#Dockerfile  Dockerfile  README.md  config.yaml  dev_config.yaml  health_check.py  main.py  pyproject.toml
backend/maelstro/: __init__.py  gn_session.py  main.py  middleware.py
backend/maelstro/common/: exceptions.py  formatters.py  models.py  types.py
backend/maelstro/config/: __init__.py  config.py
backend/maelstro/core/: __init__.py  clone.py  copy_manager.py  exceptions.py  georchestra.py  operations.py
backend/maelstro/logging/: psql_logger.py
backend/maelstro/metadata/: __init__.py  meta.py
backend/maelstro/scripts/: code_check.sh  code_fix.sh  health_check.py
backend/tests/: doc_sample_config.yaml  test_API.py  test_config.py  test_config.yaml  test_copy.py  test_db_config.yaml  test_meta.py  test_prod_to_final_prod.xsl  test_public_to_prod.xsl  test_xslt_config.yaml
config/: HOWTO.md  README.md  config.yaml  nginx-solo.conf
config/scripts/: add-header-webcomponent.sh
docker/: 0001-tweat-gateway-config-to-host-maelstro-backend-servic.patch  README.md  docker-compose.yml  geor-compose.override.yml  geor-compose.yml
docs/: index.en.md  index.fr.md
frontend/: Dockerfile  README.md  docker-entrypoint.sh  index.html  nginx-default.conf  nginx-default.conf.template  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  main.ts
georchestra/: .envs-hosts  0001-tweat-gateway-and-security-proxy-config-to-host-mael.patch  README.md  create_maelstro_gs_rsc.py  geor-compose.override.yml  geor-compose.yml  init-plateform.py  psc_antenne.sql
helm/: Chart.yaml  README.md  helmfile.yaml  values.yaml
helm/templates/: _helpers.tpl  (+6 more)
(+19 files in other folders)
