[project]
name = "maelstro"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "fastapi[standard] (>=0.115.6,<0.116.0)",
    "requests (>=2.32.3,<3.0.0)",
    "lxml (>=5.3.0,<6.0.0)",
    "types-pyyaml (>=6.0.12.20241230,<7.0.0.0)",
    "lxml-stubs (>=0.5.1,<0.6.0)",
    "geonetwork @ git+https://github.com/camptocamp/python-geonetwork@a07d7fba1a53fc9b5840b7bc139fbec418f35366",
    "geoservercloud @ git+https://github.com/camptocamp/python-geoservercloud",
]

[tool.poetry.group.check]
optional = true

[tool.poetry.group.check.dependencies]
mypy=">=1.14.1,<2.0.0"
types-requests=">=2.32.0.20241016,<3.0.0.0"
pylint=">=3.3.3,<4.0.0"
pyflakes=">=3.2.0,<4.0.0"
black=">=24.10.0,<25.0.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[tool.poetry.scripts]
health_check = "maelstro.scripts.health_check:check"
serve_dev = "maelstro:dev"
serve_docker_dev = "maelstro:docker_dev"
serve_prod = "maelstro:prod"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.format]
max-line-length = "88"
